--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,32 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
+
 html,
 body {
   padding: 0;
   margin: 0;
+  background-color: #191a27;
+  scroll-behavior: smooth;
+  user-select: none;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+
+
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background-color: transparent; 
+}
+::-webkit-scrollbar-thumb {
+  background: #337BD4; 
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #295b99; 
+}
+
 
 a {
   color: inherit;
@@ -14,3 +36,7 @@ a {
 * {
   box-sizing: border-box;
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
