IDK why it isn't working

--- a/styles/Profile.module.scss
+++ b/styles/Profile.module.scss
@@ -65,7 +65,7 @@ div.Card{
 		height: 100%;
 		width: 100%;
 		z-index: -1;
-		background: rgba(255, 255, 255, 0.897);	
+		background: rgb(255, 255, 255);	
 	        transform: scale(0.001);
 		transition: all cubic-bezier(0.175, 0.885, 0.32, 1.275) 250ms;
 		border-radius: 0.7rem;
