--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Cabin&display=swap');
 
 
 html,
