--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@400&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Cabin&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap'); */
+/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap'); */
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap'); */
+/* @import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@400&display=swap'); */
+/* @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap'); */
+/* @import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap'); */
+/* @import url('https://fonts.googleapis.com/css2?family=Cabin&display=swap'); */
 
 
 html,
